--- a/article.html
+++ b/article.html
@@ -36,8 +36,7 @@
                         CAMBRIDGE, Mass. — One night late in 1979, an itinerant young physicist 
                         named Alan Guth, with a new son and a year’s appointment at Stanford, 
                         stayed up late with his notebook and equations, venturing far beyond the 
-                        world of known physics.<br><br>
-                        He was trying to understand why there was no trace of some exotic particles
+                        world of known physics.<br><br>He was trying to understand why there was no trace of some exotic particles
                         that should have been created in the Big Bang. Instead he discovered what 
                         might have made the universe bang to begin with. A potential hitch in the 
                         presumed course of cosmic evolution could have infused space itself with a 
@@ -104,23 +103,19 @@
                         Larry, who was sleeping that night in 1979), in his office last week.<br><br>
                         “It was a very special moment, and one we took very seriously as scientists,”
                         said Dr. Kovac, who chose his words as carefully as he tended his radio 
-                        telescopes.<br><br>
-                        Andrei Linde of Stanford, a prolific theorist who first described the most
+                        telescopes.<br><br>Andrei Linde of Stanford, a prolific theorist who first described the most
                         popular variant of inflation, known as chaotic inflation, in 1983, was about
                         to go on vacation in the Caribbean last week when Chao-Lin Kuo, a Stanford 
                         colleague and a member of Dr. Kovac’s team, knocked on his door with a bottle of 
-                        Champagne to tell him the news.<br><br>
-                        Confused, Dr. Linde called out to his wife, asking if she had ordered
+                        Champagne to tell him the news.<br><br>Confused, Dr. Linde called out to his wife, asking if she had ordered
                         anything.<br><br>“And then I told him that in the beginning we thought that this 
                         was a delivery but we did not think that we ordered anything, but I simply forgot that
                         actually I did order it, 30 years ago,” Dr. Linde wrote in an email.<br><br>
                         Calling from Bonaire, the Dutch Caribbean island, Dr. Linde said he was still 
                         hyperventilating. “Having news like this is the best way of spoiling a vacation,
-                        ” he said.<br><br>
-                        By last weekend, as social media was buzzing with rumors that inflation had been 
+                        ” he said.<br><br>By last weekend, as social media was buzzing with rumors that inflation had been 
                         seen and news spread, astrophysicists responded with a mixture of jubilation and 
-                        caution.<br><br>
-                        Max Tegmark, a cosmologist at M.I.T., wrote in an email, “I think that if this 
+                        caution.<br><br>Max Tegmark, a cosmologist at M.I.T., wrote in an email, “I think that if this 
                         stays true, it will go down as one of the greatest discoveries in the history 
                         of science.”<br><br>
                         John E. Carlstrom of the University of Chicago, Dr. Kovac’s mentor and head of 
@@ -129,8 +124,7 @@
                         Paul J. Steinhardt of Princeton, author of a competitor to inflation that posits 
                         the clash of a pair of universes as the cause of genesis, said that if true, the 
                         Bicep result would eliminate his model, but he expressed reservations about 
-                        inflation.<br><br>
-                        Lawrence M. Krauss of Arizona State and others also emphasized the need for 
+                        inflation.<br><br>Lawrence M. Krauss of Arizona State and others also emphasized the need for 
                         confirmation, noting that the new results exceeded earlier estimates based on 
                         temperature maps of the cosmic background by the European Space Agency’s Planck 
                         satellite and other assumptions about the universe.<br><br>
@@ -200,13 +194,22 @@
                         view.<br><br>“If you trace your cosmic roots,” said Abraham Loeb, a Harvard-Smithsonian astronomer who was not part 
                         of the team, “you wind up at inflation.”<br><br>
                     </p>
+
+                    <section class="end-tag">
+                        <p>
+                            A version of this article appears in print on March 18, 2014, Section A, Page 1 of the New York edition with the headline: Space 
+                            Ripples Reveal Big Bang’s Smoking Gun. Order Reprints | Today’s Paper | Subscribe
+                        </p>
+                        <button>Read 615 Comments</button>
+                        <div>social media icons</div>
+                    </section>
                 </section>
             </article>
         </div>
 
 
         <!--flexbox-->
-        <aside>Editor pick's
+        <aside class="mini-aside">Editor pick's
             <div>
                 <img>
                 caption
@@ -224,7 +227,7 @@
         </aside>
 
         <!--grid-->
-        <aside>
+        <aside class="main-aside">
             <section>suggested newsletters for you
             </section>
 
@@ -239,29 +242,125 @@
         </aside>
 
         <!--grid-->
-        <footer><!--new york times news opinion arts etc.-->
-            <section>News 
+        <section class="end-section"><!--new york times news opinion arts etc.-->
+            <h2>The New York Times</h2>
+
+            <a href="">Go to Home Page >></a>
+            <section>
+                <h3>News</h3>
+                <a href="">Home Page</a>
+                <a href="">World</a>
+                <a href="">Coronavirus</a>
+                <a href="">U.S</a>
+                <a href="">Politics</a>
+                <a href="">New York</a>
+                <a href="">Business</a>
+                <a href="">Tech</a>
+                <a href="">Science</a>
+                <a href="">Sports</a>
+                <a href="">Obituaries</a>
+                <a href="">Today's Paper</a>
+                <a href="">Corrections</a>
             </section>
 
-            <section>Opinion
+            <section>
+                <h3>Opinion</h3>
+                <a href="">Today's Opinion</a>
+                <a href="">Op-Ed Columnists</a>
+                <a href="">Editorials</a>
+                <a href="">Op-Ed Contributors</a>
+                <a href="">Letters</a>
+                <a href="">Sunday Review</a>
+                <a href="">Video: Opinion</a>
             </section>
 
-            <section>Arts
+            <section>
+                <h3>Arts</h3>
+                <a href="">Today's Arts</a>
+                <a href="">Art & Design</a>
+                <a href="">Books</a>
+                <a href="">Dance</a>
+                <a href="">Movies</a>
+                <a href="">Music</a>
+                <a href="">Pop Culture</a>
+                <a href="">Television</a>
+                <a href="">Theater</a>
+                <a href="">Video: Arts</a>
             </section>
 
-            <section>Living
+            <section>
+                <h3>Living</h3>
+                <a href="">At Home</a>
+                <a href="">Automobiles</a>
+                <a href="">Games</a>
+                <a href="">Education</a>
+                <a href="">Food</a>
+                <a href="">Health</a>
+                <a href="">Jobs</a>
+                <a href="">Love</a>
+                <a href="">Magazine</a>
+                <a href="">Parenting</a>
+                <a href="">Real Estate</a>
+                <a href="">Recipies</a>
+                <a href="">Style</a>
+                <a href="">T Magazine</a>
+                <a href="">Travel</a>
             </section>
 
-            <section>More
+            <section>
+                <h3>More</h3>
+                <a href="">Reader Center</a>
+                <a href="">Wirecutter</a>
+                <a href="">Live Events</a>
+                <a href="">The Learning Network</a>
+                <a href="">Tools & Services</a>
+                <a href="">Multimedia</a>
+                <a href="">Photography</a>
+                <a href="">Video</a>
+                <a href="">Newsletters</a>
+                <a href="">TimesMachine</a>
+                <a href="">NYT Store</a>
+                <a href="">Times Journeys</a>
+                <a href="">Manage My Account</a>
             </section>
 
-            <section>Subscribe
+            <section>
+                <h3>Subscribe</h3>
+                <a href="">Home Delivery</a>
+                <a href="">Digital Subscriptions</a>
+                <a href="">Games</a>
+                <a href="">Cooking</a>
+                <a href="">Email Newsletters</a>
+                <a href="">Corporate Subscriptions</a>
+                <a href="">Education Rate</a>
             </section>
 
-            <section>Languages
+            <section>
+                <a href="">Mobile Applications</a>
+                <a href="">Replica Edition</a>
+                <a href="">International</a>
+                <a href="">Canada</a>
+                <a href="">Español</a>
+                <a href="">中文网</a>
             </section>
+        </section>
 
-            <section>Links
+        <footer>
+            <section>
+                <a href="">© 2021 The New York Times Company</a>
+                <a href="">NYTco</a>
+                <a href="">Contact Us</a>
+                <a href="">Accessibility</a>
+                <a href="">Work with us</a>
+                <a href="">Advertise</a>
+                <a href="">T Brand Studio</a>
+                <a href="">Your Ad Choices</a>
+                <a href="">Privacy Policy</a>
+                <a href="">Terms of Service</a>
+                <a href="">Terms of Sale</a>
+                <a href="">Site Map</a>
+                <a href="">Help</a>
+                <a href="">Subscriptions</a>
             </section>
         </footer>
     </body>
