--- a/article.html
+++ b/article.html
@@ -20,11 +20,16 @@
 
         <!--flexbox-->
         <div class="main-content">
-            <h1>Space Ripples Reveal Big Bang's Smoking Gun</h1>
-            <div>social media icons</div>
+
+            <div class="title-container">
+                <h1>Space Ripples Reveal Big Bang's<br> Smoking Gun</h1> <hr>
+                <div>
+                    <img src="/imgs/Screenshot_2021-02-19_20-52-03.png">
+                </div>
+            </div>
 
             <!-- title img-->
-            <img>
+            <img class="title-img" src="/imgs/18cosmos-superJumbo.jpg">
 
             <!-- article body-->
             <article>
@@ -33,43 +38,18 @@
 
                 <section>
                     <p>
-                        CAMBRIDGE, Mass. — One night late in 1979, an itinerant young physicist 
-                        named Alan Guth, with a new son and a year’s appointment at Stanford, 
-                        stayed up late with his notebook and equations, venturing far beyond the 
-                        world of known physics.<br><br>He was trying to understand why there was no trace of some exotic particles
-                        that should have been created in the Big Bang. Instead he discovered what 
-                        might have made the universe bang to begin with. A potential hitch in the 
-                        presumed course of cosmic evolution could have infused space itself with a 
-                        special energy that exerted a repulsive force, causing the universe to swell 
-                        faster than the speed of light for a prodigiously violent instant.<br><br>
-                        If true, the rapid engorgement would solve paradoxes like why the heavens
-                        look uniform from pole to pole and not like a jagged, warped mess. The 
-                        enormous ballooning would iron out all the wrinkles and irregularities. 
-                        Those particles were not missing, but would be diluted beyond detection, 
-                        like spit in the ocean.<br><br>“SPECTACULAR REALIZATION,” Dr. Guth wrote across 
-                        the top of the page and drew a double box around it.<br><br>
-                        On Monday, Dr. Guth’s starship came in. Radio astronomers reported that they
-                        had seen the beginning of the Big Bang, and that his hypothesis, known 
-                        undramatically as inflation, looked right.<br><br>
-                        Reaching back across 13.8 billion years to the first sliver of cosmic time with
-                        telescopes at the South Pole, a team of astronomers led by John M. Kovac of the
-                        Harvard-Smithsonian Center for Astrophysics detected ripples in the fabric of 
-                        space-time — so-called gravitational waves — the signature of a universe being 
-                        wrenched violently apart when it was roughly a trillionth of a trillionth of a 
-                        trillionth of a second old. They are the long-sought smoking-gun evidence of 
-                        inflation, proof, Dr. Kovac and his colleagues say, that Dr. Guth was correct.<br><br>
-                        Inflation has been the workhorse of cosmology for 35 years, though many, 
-                        including Dr. Guth, wondered whether it could ever be proved.<br><br>
-                        If corroborated, Dr. Kovac’s work will stand as a landmark in science 
-                        comparable to the recent discovery of dark energy pushing the universe apart, 
-                        or of the Big Bang itself. It would open vast realms of time and space and 
-                        energy to science and speculation.<br><br>
-                        Confirming inflation would mean that the universe we see, extending 14 billion 
-                        light-years in space with its hundreds of billions of galaxies, is only an
-                        infinitesimal patch in a larger cosmos whose extent, architecture and fate are 
-                        unknowable. Moreover, beyond our own universe there might be an endless number 
-                        of other universes bubbling into frothy eternity, like a pot of pasta water 
-                        boiling over.
+                        CAMBRIDGE, Mass. — One night late in 1979, an itinerant young physicist named Alan Guth, with a new son and a year’s appointment at Stanford, stayed up late with his notebook and equations, venturing far beyond the 
+                        world of known physics.<br><br>He was trying to understand why there was no trace of some exotic particlesthat should have been created in the Big Bang. Instead he discovered what might have made the universe bang to begin with. A potential hitch in the 
+                        presumed course of cosmic evolution could have infused space itself with a special energy that exerted a repulsive force, causing the universe to swell faster than the speed of light for a prodigiously violent instant.<br><br>
+                        If true, the rapid engorgement would solve paradoxes like why the heavenslook uniform from pole to pole and not like a jagged, warped mess. The enormous ballooning would iron out all the wrinkles and irregularities. 
+                        Those particles were not missing, but would be diluted beyond detection, like spit in the ocean.<br><br>“SPECTACULAR REALIZATION,” Dr. Guth wrote across the top of the page and drew a double box around it.<br><br>
+                        On Monday, Dr. Guth’s starship came in. Radio astronomers reported that theyhad seen the beginning of the Big Bang, and that his hypothesis, known undramatically as inflation, looked right.<br><br>
+                        Reaching back across 13.8 billion years to the first sliver of cosmic time withtelescopes at the South Pole, a team of astronomers led by John M. Kovac of theHarvard-Smithsonian Center for Astrophysics detected ripples in the fabric of 
+                        space-time — so-called gravitational waves — the signature of a universe being wrenched violently apart when it was roughly a trillionth of a trillionth of a trillionth of a second old. They are the long-sought smoking-gun evidence of 
+                        inflation, proof, Dr. Kovac and his colleagues say, that Dr. Guth was correct.<br><br>Inflation has been the workhorse of cosmology for 35 years, though many, including Dr. Guth, wondered whether it could ever be proved.<br><br>
+                        If corroborated, Dr. Kovac’s work will stand as a landmark in science comparable to the recent discovery of dark energy pushing the universe apart, or of the Big Bang itself. It would open vast realms of time and space and 
+                        energy to science and speculation.<br><br>Confirming inflation would mean that the universe we see, extending 14 billion light-years in space with its hundreds of billions of galaxies, is only an
+                        infinitesimal patch in a larger cosmos whose extent, architecture and fate are unknowable. Moreover, beyond our own universe there might be an endless number of other universes bubbling into frothy eternity, like a pot of pasta water boiling over.
                     </p>
                 </section>
 
@@ -243,105 +223,122 @@
 
         <!--grid-->
         <section class="end-section"><!--new york times news opinion arts etc.-->
-            <h2>The New York Times</h2>
 
-            <a href="">Go to Home Page >></a>
-            <section>
-                <h3>News</h3>
-                <a href="">Home Page</a>
-                <a href="">World</a>
-                <a href="">Coronavirus</a>
-                <a href="">U.S</a>
-                <a href="">Politics</a>
-                <a href="">New York</a>
-                <a href="">Business</a>
-                <a href="">Tech</a>
-                <a href="">Science</a>
-                <a href="">Sports</a>
-                <a href="">Obituaries</a>
-                <a href="">Today's Paper</a>
-                <a href="">Corrections</a>
-            </section>
+            <div class="header">
+                <h2>The New York Times</h2>
+                <a id = "home-page-link" href="">Go to Home Page >></a>
+            </div>
 
-            <section>
-                <h3>Opinion</h3>
-                <a href="">Today's Opinion</a>
-                <a href="">Op-Ed Columnists</a>
-                <a href="">Editorials</a>
-                <a href="">Op-Ed Contributors</a>
-                <a href="">Letters</a>
-                <a href="">Sunday Review</a>
-                <a href="">Video: Opinion</a>
-            </section>
+            <section class="links">
+                <section>
+                    <h3>News</h3>
+                    <div class="links-1">
+                        <a href="">Home Page</a>
+                        <a href="">World</a>
+                        <a href="">Coronavirus</a>
+                        <a href="">U.S</a>
+                        <a href="">Politics</a>
+                        <a href="">New York</a>
+                        <a href="">Business</a>
+                        <a href="">Tech</a>
+                        <a href="">Science</a>
+                        <a href="">Sports</a>
+                        <a href="">Obituaries</a>
+                        <a href="">Today's Paper</a>
+                        <a href="">Corrections</a>
+                    </div>
+                </section>
 
-            <section>
-                <h3>Arts</h3>
-                <a href="">Today's Arts</a>
-                <a href="">Art & Design</a>
-                <a href="">Books</a>
-                <a href="">Dance</a>
-                <a href="">Movies</a>
-                <a href="">Music</a>
-                <a href="">Pop Culture</a>
-                <a href="">Television</a>
-                <a href="">Theater</a>
-                <a href="">Video: Arts</a>
-            </section>
+                <section>
+                    <h3>Opinion</h3>
+                    <div class="links-1">
+                        <a href="">Today's Opinion</a>
+                        <a href="">Op-Ed Columnists</a>
+                        <a href="">Editorials</a>
+                        <a href="">Op-Ed Contributors</a>
+                        <a href="">Letters</a>
+                        <a href="">Sunday Review</a>
+                        <a href="">Video: Opinion</a>
+                    </div>
+                </section>
 
-            <section>
-                <h3>Living</h3>
-                <a href="">At Home</a>
-                <a href="">Automobiles</a>
-                <a href="">Games</a>
-                <a href="">Education</a>
-                <a href="">Food</a>
-                <a href="">Health</a>
-                <a href="">Jobs</a>
-                <a href="">Love</a>
-                <a href="">Magazine</a>
-                <a href="">Parenting</a>
-                <a href="">Real Estate</a>
-                <a href="">Recipies</a>
-                <a href="">Style</a>
-                <a href="">T Magazine</a>
-                <a href="">Travel</a>
-            </section>
+                <section>
+                    <h3>Arts</h3>
+                    <div class="links-1">
+                        <a href="">Today's Arts</a>
+                        <a href="">Art & Design</a>
+                        <a href="">Books</a>
+                        <a href="">Dance</a>
+                        <a href="">Movies</a>
+                        <a href="">Music</a>
+                        <a href="">Pop Culture</a>
+                        <a href="">Television</a>
+                        <a href="">Theater</a>
+                        <a href="">Video: Arts</a>
+                    </div>
+                </section>
 
-            <section>
-                <h3>More</h3>
-                <a href="">Reader Center</a>
-                <a href="">Wirecutter</a>
-                <a href="">Live Events</a>
-                <a href="">The Learning Network</a>
-                <a href="">Tools & Services</a>
-                <a href="">Multimedia</a>
-                <a href="">Photography</a>
-                <a href="">Video</a>
-                <a href="">Newsletters</a>
-                <a href="">TimesMachine</a>
-                <a href="">NYT Store</a>
-                <a href="">Times Journeys</a>
-                <a href="">Manage My Account</a>
-            </section>
+                <section>
+                    <h3>Living</h3>
+                    <div class="links-1">
+                        <a href="">At Home</a>
+                        <a href="">Automobiles</a>
+                        <a href="">Games</a>
+                        <a href="">Education</a>
+                        <a href="">Food</a>
+                        <a href="">Health</a>
+                        <a href="">Jobs</a>
+                        <a href="">Love</a>
+                        <a href="">Magazine</a>
+                        <a href="">Parenting</a>
+                        <a href="">Real Estate</a>
+                        <a href="">Recipies</a>
+                        <a href="">Style</a>
+                        <a href="">T Magazine</a>
+                        <a href="">Travel</a>
+                    </div>
+                </section>
 
-            <section>
-                <h3>Subscribe</h3>
-                <a href="">Home Delivery</a>
-                <a href="">Digital Subscriptions</a>
-                <a href="">Games</a>
-                <a href="">Cooking</a>
-                <a href="">Email Newsletters</a>
-                <a href="">Corporate Subscriptions</a>
-                <a href="">Education Rate</a>
-            </section>
+                <section>
+                    <h3>More</h3>
+                    <div class="links-1">
+                        <a href="">Reader Center</a>
+                        <a href="">Wirecutter</a>
+                        <a href="">Live Events</a>
+                        <a href="">The Learning Network</a>
+                        <a href="">Tools & Services</a>
+                        <a href="">Multimedia</a>
+                        <a href="">Photography</a>
+                        <a href="">Video</a>
+                        <a href="">Newsletters</a>
+                        <a href="">TimesMachine</a>
+                        <a href="">NYT Store</a>
+                        <a href="">Times Journeys</a>
+                        <a href="">Manage My Account</a>
+                    </div>
+                </section>
 
-            <section>
-                <a href="">Mobile Applications</a>
-                <a href="">Replica Edition</a>
-                <a href="">International</a>
-                <a href="">Canada</a>
-                <a href="">Español</a>
-                <a href="">中文网</a>
+                <section>
+                    <section>
+                        <h3>Subscribe</h3>
+                        <a href="">Home Delivery</a>
+                        <a href="">Digital Subscriptions</a>
+                        <a href="">Games</a>
+                        <a href="">Cooking</a>
+                        <a href="">Email Newsletters</a>
+                        <a href="">Corporate Subscriptions</a>
+                        <a href="">Education Rate</a>
+                    </section>
+
+                    <section>
+                        <a href="">Mobile Applications</a>
+                        <a href="">Replica Edition</a>
+                        <a href="">International</a>
+                        <a href="">Canada</a>
+                        <a href="">Español</a>
+                        <a href="">中文网</a>
+                    </section>
+                </section>
             </section>
         </section>
 
