added more imgs and refined layout

--- a/article.html
+++ b/article.html
@@ -8,7 +8,10 @@
     <body>
         <!-- flexbox -->
         <header>
-            <p>SPACE & COSMOS</p>
+            <div class="header-subset">
+                <img src="imgs/eewfwef.PNG">
+                <p>SPACE & COSMOS</p>
+            </div>
 
             <p>New York Times</p>
 
@@ -39,7 +42,9 @@
             <!-- article body-->
             <article>
                 <section class="article-credits">
-                    <div>author + date
+                    <div>
+                        <p>By Dennis Overbye<p>
+                        <p>March 17, 2014</p>
                     </div>
                 </section>
 
@@ -214,7 +219,7 @@
                     <!-- grid -->
                     <div class="related-post-imgs">
                         <div>
-                            <img src="">
+                            <img src="/imgs/werwewer.PNG">
                             <p>As Needed</p>
                             <p>Breaking News</p>
                             <p>Alerts when important news breaks around the world</p>
@@ -222,7 +227,7 @@
                         </div>
 
                         <div>
-                            <img src="">
+                            <img src="imgs/werwerewr.PNG">
                             <p>Weekly</p>
                             <p>At Home</p>
                             <p>Our best suggestions for how to live a full and cultured life during the pandemic, at home.</p>
@@ -230,7 +235,7 @@
                         </div>
 
                         <div>
-                            <img src="">
+                            <img src="imgs/werewrwerew.PNG">
                             <p>Daily</p>
                             <p>The Morning<p>
                             <p>Make sense of the day's news and ideas. David Leonhardt and Times journalists guide you through what's happening. And why it matters</p>
@@ -272,6 +277,7 @@
                 
 
                 <section class="related-post-container">
+                
                     <h3>Editor's Picks</h3>
                     <div class="related-post-imgs">
                         <div>
@@ -293,7 +299,7 @@
             </div>
 
             <section class="most-popular-section">
-                <h3>most popular</h3>
+                <h3>Most Popular</h3>
                 <a href="">This is how you get the best scrambled eggs</a>
                 <a href="">The Unequal Inheritance: It Can Work, or It Can ‘Destroy Relationships’</a>
                 <a href="">‘I Am Worth It’: Why Thousands of Doctors in America Can’t Get a Job</a>
@@ -404,7 +410,7 @@
                 </section>
 
                 <section>
-                    <section>
+                    <section class="subscribe">
                         <h3>Subscribe</h3>
                         <a href="">Home Delivery</a>
                         <a href="">Digital Subscriptions</a>
@@ -415,7 +421,7 @@
                         <a href="">Education Rate</a>
                     </section>
 
-                    <section>
+                    <section class=versions>
                         <a href="">Mobile Applications</a>
                         <a href="">Replica Edition</a>
                         <a href="">International</a>
