--- a/article.html
+++ b/article.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset= "UTF-8">
         <link rel="stylesheet" href="article.css">
+        <title>New York Times</title>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet">
     </head>
