refined css and html code

--- a/article.html
+++ b/article.html
@@ -180,25 +180,6 @@
             </article>
         </div>
 
-
-        <!--flexbox-->
-        <!-- <aside class="mini-aside">Editor pick's
-            <div>
-                <img>
-                caption
-            </div>
-
-            <div>
-                <img>
-                caption 
-            </div>
-
-            <div>
-                <img>
-                caption 
-            </div>
-        </aside> -->
-
         <!-- flexbox -->
         <aside class="main-aside">
             <!-- grid -->
@@ -275,8 +256,6 @@
                     </div>
                 </section>
 
-                
-
                 <section class="related-post-container">
                     <h3 class="section-title">Editor's Picks</h3>
                     <div class="related-post-imgs">
@@ -315,14 +294,13 @@
 
         <!--grid-->
         <section class="end-section"><!--new york times news opinion arts etc.-->
-
             <div class="header">
                 <h2 class="nyt-font">The New York Times</h2>
                 <a id = "home-page-link" href="">Go to Home Page >></a>
             </div>
 
             <section class="links">
-                <section>
+                <section class="link-container">
                     <h3 class="section-title">NEWS</h3>
                     <div class="end-links">
                         <a href="">Home Page</a>
@@ -341,7 +319,7 @@
                     </div>
                 </section>
 
-                <section>
+                <section class="link-container">
                     <h3 class="section-title">OPINION</h3>
                     <div class="end-links">
                         <a href="">Today's Opinion</a>
@@ -354,7 +332,7 @@
                     </div>
                 </section>
 
-                <section>
+                <section class="link-container">
                     <h3 class="section-title">ARTS</h3>
                     <div class="end-links">
                         <a href="">Today's Arts</a>
@@ -370,7 +348,7 @@
                     </div>
                 </section>
 
-                <section>
+                <section class="link-container">
                     <h3 class="section-title">LIVING</h3>
                     <div class="end-links">
                         <a href="">At Home</a>
@@ -391,7 +369,7 @@
                     </div>
                 </section>
 
-                <section>
+                <section class="link-container">
                     <h3 class="section-title">MORE</h3>
                     <div class="end-links">
                         <a href="">Reader Center</a>
@@ -410,7 +388,7 @@
                     </div>
                 </section>
 
-                <section class="end-column">
+                <section class="end-column link-container">
                     <section class="subscribe section-title">
                         <h3>SUBSCRIBE</h3>
                         <div class="bold-links">
@@ -426,7 +404,7 @@
                         </div>
                     </section>
 
-                    <section class="versions font-style-3">
+                    <section class="versions font-style-3 link-container">
                         <a href="">Mobile Applications</a>
                         <a href="">Replica Edition</a>
                         <a href="">International</a>
