--- a/article.html
+++ b/article.html
@@ -6,6 +6,7 @@
         <title>New York Times</title>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Lobster&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -84,7 +85,7 @@
                     </div>
 
                     <div class="infographic-grid">
-                        <img src="imgs/theory_of_inflation/inflation-945 (1).png">
+                        <img src="imgs/inflation-945.png">
                         <p class="row1" id="para-1"><b>THE UNIVERSE</b> is just under  14 billion years old. From our position in the Milky Way galaxy, we can observe a sphere that is now about 92 billion light-years across. But there's a mystery. Wherever we look, the universe has an even temperature.</p>
                         <p class="row1" id="para-2"><b>NOT ENOUGH TIME</b> The universe is not old enough for light to have traveled the vast distance from one side of the universe to the other, and there has not been enough time for scattered patches of hot and cold to mix into an even temperature.</p>
                         <p class="row1" id="para-3"><b>DISTANT COFFEE</b>  At a smaller scale, imagine using a telescope to look a mile in one direction. You see a coffee cup, and from the amount of steam, you can estimate its temperature and how much it has cooled</p>
